@@ -3,9 +3,9 @@ package sweng_plus.boardgames.ludo.gui;
 import org.lwjgl.glfw.GLFW;
 import sweng_plus.boardgames.ludo.Ludo;
 import sweng_plus.framework.boardgame.Engine;
-import sweng_plus.framework.userinterface.gui.util.AnchorPoint;
 import sweng_plus.framework.userinterface.gui.Screen;
 import sweng_plus.framework.userinterface.gui.WrappedScreen;
+import sweng_plus.framework.userinterface.gui.util.AnchorPoint;
 import sweng_plus.framework.userinterface.gui.util.Texture;
 import sweng_plus.framework.userinterface.gui.util.TextureHelper;
 import sweng_plus.framework.userinterface.gui.widget.ButtonWidget;
@@ -13,7 +13,7 @@ import sweng_plus.framework.userinterface.gui.widget.Dimensions;
 import sweng_plus.framework.userinterface.gui.widget.TextWidget;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 public class OptionsScreen extends WrappedScreen
 {
@@ -62,9 +62,9 @@ public class OptionsScreen extends WrappedScreen
             e.printStackTrace();
         }
         
-        widgets.add(new TextWidget(this, topButton.clone(), Ludo.instance().fontRenderer32, Arrays.asList("Top Button")));
-        widgets.add(new TextWidget(this, middleButton.clone(), Ludo.instance().fontRenderer32, Arrays.asList("Middle Button")));
-        widgets.add(new TextWidget(this, bottomButton.clone(), Ludo.instance().fontRenderer32, Arrays.asList("Exit")));
+        widgets.add(new TextWidget(this, topButton.clone(), Ludo.instance().fontRenderer32, List.of("Top Button")));
+        widgets.add(new TextWidget(this, middleButton.clone(), Ludo.instance().fontRenderer32, List.of("Middle Button")));
+        widgets.add(new TextWidget(this, bottomButton.clone(), Ludo.instance().fontRenderer32, List.of("Exit")));
     }
     
     @Override
